--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ main h1 {
   color: rgb(129, 141, 179);
   font-family: arial;
 }
+main #album .photo img {
+  width: 400px;
+  
+}
 footer {
   height: 40px;
   background-color: rgb(129, 141, 179);
@@ -82,7 +86,8 @@ label {
 input[type="radio"] {
   width: 25px;
 }
-textarea, input {
+textarea,
+input {
   width: 300px;
 }
 input[type="submit"] {
